# project-mediaswitch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL  LICENSE.md  Makefile  makefile  readme.md
control/: app.js  readme.md
control/projectcontrol/: index.js  package.json
projectlib/: CMakeLists.txt  json.cpp  makefile  projectdaemon.cpp  projecthttpclient.cpp  projecthttpclient.h  projecthttpserver.cpp  projecthttpserver.h  projectsipstring.cpp  projectsipstring.h  projectwebdocument.cpp  projectwebdocument.h
rtp/: CMakeLists.txt  controlclient.cpp  firfilter.cpp  g711.cpp  g711.h  globals.h  main.cpp  makefile  projectrtpchannel.cpp  projectrtpchannel.h  projectrtpcodecx.cpp  projectrtpcodecx.h  projectrtpmain.cpp  projectrtpmixer.cpp  projectrtpmixer.h  projectrtppacket.cpp  projectrtppacket.h  projectrtpsoundfile.cpp  projectrtpsoundfile.h  projectrtpsoundsoup.h  projectrtptonegen.cpp  projetcrtpsoundsoup.cpp  readme.md
scripts/: gensipheadercrc.py
sip/: CMakeLists.txt  globals.h  main.cpp  makefile  projectsipconfig.cpp  projectsipconfig.h  projectsipdialog.cpp  projectsipdialog.h  projectsipdialoginvite.cpp  projectsipdialogrefer.cpp  projectsipdirectory.cpp  projectsipdirectory.h  projectsipdnssrvresolver.cpp  projectsipdnssrvresolver.h  projectsipendpoint.cpp  projectsipendpoint.h  projectsipeventstate.cpp  projectsipeventstate.h  projectsipmain.cpp  projectsippacket.cpp  projectsippacket.h  projectsipregistrar.cpp  projectsipregistrar.h  projectsipsdp.cpp  projectsipsdp.h  projectsipserver.cpp  projectsipserver.h  projectsipsm.cpp  projectsipsm.h  tests.cpp
sipsrc/: json.hpp  main.cpp  makefile  projecthttpclient.cpp  projecthttpclient.h  projecthttpserver.cpp  projecthttpserver.h  projectsipconfig.cpp  projectsipconfig.h  projectsipdialog.cpp  projectsipdialog.h  projectsipdirectory.cpp  projectsipdirectory.h  projectsippacket.cpp  projectsippacket.h  projectsipregistrar.cpp  projectsipregistrar.h  projectsipsdp.cpp  projectsipserver.cpp  projectsipserver.h  projectsipsm.cpp  projectsipsm.h  projectsipstring.cpp  projectsipstring.h  projectwebdocument.cpp  projectwebdocument.h  test.h  tests.cpp
src/: core  main.cpp  makefile  projectsippacket.cpp  projectsippacket.h  projectsippacket.h~  projectsipregistrar.cpp  projectsipregistrar.h  projectsipserver.cpp  projectsipserver.h  projectsipsm.cpp  projectsipsm.h  projectwebdocument.cpp  projectwebdocument.cpp~  projectwebdocument.h  projectwebdocument.h~  test.h  tests.cpp  tests.cpp~
testfiles/: registerclient.csv  registerclient.xml  siptest1.txt  uaclateoffer.xml
